--- a/FitnessTracker.V1/wwwroot/index.html
+++ b/FitnessTracker.V1/wwwroot/index.html
@@ -50,7 +50,17 @@
             modal?.hide();
         };
     </script>
-
+    <script>
+        window.listenForServiceWorkerUpdates = function (dotNetObj) {
+            if (navigator.serviceWorker) {
+                navigator.serviceWorker.addEventListener('message', (event) => {
+                    if (event.data?.type === 'update-available') {
+                        dotNetObj.invokeMethodAsync('NotifyUpdateAvailable');
+                    }
+                });
+            }
+        };
+    </script>
 </body>
 
 </html>
