--- a/FitnessTracker.V1/wwwroot/index.html
+++ b/FitnessTracker.V1/wwwroot/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitnessTracker</title>
     <base href="/" />
+
+    <!-- ► Styles -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/mobile-native.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/mobile-native.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="FitnessTracker.V1.styles.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
@@ -20,10 +21,8 @@
 
 <body>
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
+        <!-- Loader Blazor -->
+        <svg class="loading-progress"><circle r="40%" cx="50%" cy="50%" /><circle r="40%" cx="50%" cy="50%" /></svg>
         <div class="loading-progress-text"></div>
     </div>
 
@@ -33,41 +32,41 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- ─────────────────────────── JS ─────────────────────────── -->
+    <!-- 1. Bootstrap JS (obligatoire pour Blazor Bootstrap) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            crossorigin="anonymous"></script>
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- 2. Chart.js 4.x (obligatoire si tu utilises les graphiques) -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"
+            crossorigin="anonymous"></script>
+    <!-- (optionnel) DataLabels si tu en as besoin -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.2.0/chartjs-plugin-datalabels.min.js"
+            crossorigin="anonymous"></script> -->
+    <!-- 3. Script interne de Blazor Bootstrap : FON-DA-MEN-TAL -->
+    <script src="_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
 
-    <script src="sw-utils.js"></script>
-
+    <!-- 4. Blazor runtime -->
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <!-- 5. Service-worker utils + enregistrement -->
+    <script src="sw-utils.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
-
+    <!-- 6. Helpers custom -->
     <script>
         window.listenForServiceWorkerUpdates = function (dotNetObj) {
             if (navigator.serviceWorker) {
-                navigator.serviceWorker.addEventListener('message', (event) => {
+                navigator.serviceWorker.addEventListener('message', event => {
                     if (event.data?.type === 'update-available') {
                         dotNetObj.invokeMethodAsync('NotifyUpdateAvailable');
                     }
                 });
             }
         };
-    </script>
-    <script>
-        window.showModal = (id) => {
-            const modalElement = document.getElementById(id);
-            const modal = bootstrap.Modal.getOrCreateInstance(modalElement);
-            modal.show();
-        };
 
-        window.hideModal = (id) => {
-            const modalElement = document.getElementById(id);
-            const modal = bootstrap.Modal.getInstance(modalElement);
-            modal?.hide();
-        };
+        window.showModal = id => bootstrap.Modal.getOrCreateInstance(document.getElementById(id)).show();
+        window.hideModal = id => bootstrap.Modal.getInstance(document.getElementById(id))?.hide();
     </script>
 </body>
-
 </html>
