--- a/FitnessTracker.V1/wwwroot/index.html
+++ b/FitnessTracker.V1/wwwroot/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    
+
     <div id="app"></div>
     <div id="blazor-error-ui">…</div>
 
@@ -75,6 +75,8 @@
                 .getInstance(document.getElementById(id))
                 ?.hide();
     </script>
+    <script src="my-toast.js"></script>
+    <script src="animations.js"></script>
     <script>
         window.launchFireworks = () => {
             const launch = () => {
