--- a/FitnessTracker.V1/wwwroot/index.html
+++ b/FitnessTracker.V1/wwwroot/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/mobile-native.css" />
     <!--<link rel="stylesheet" href="css/app.css" />-->
 
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="FitnessTracker.V1.styles.css" rel="stylesheet" />
     <link href="css/layout-core.css" rel="stylesheet" />
@@ -22,7 +23,7 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-
+    <link href="css/roadmap.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -75,6 +76,9 @@
                 .getInstance(document.getElementById(id))
                 ?.hide();
     </script>
+    <script src="js/roadmap.js"></script>
+    <script src="pwa-update.js"></script>
+
     <script src="my-toast.js"></script>
     <script src="animations.js"></script>
     <script>
