--- a/FitnessTracker.V1/wwwroot/index.html
+++ b/FitnessTracker.V1/wwwroot/index.html
@@ -18,12 +18,13 @@
     <link href="FitnessTracker.V1.styles.css" rel="stylesheet" />
     <link href="css/layout-core.css" rel="stylesheet" />
     <link href="css/components.css" rel="stylesheet" />
+    <link href="css/statsPageStyle.css" rel="stylesheet" />
     <link href="css/duo-theme.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-   
+
     <link href="css/roadmap.css" rel="stylesheet" />
 </head>
 
