--- a/FitnessTracker.V1/wwwroot/index.html
+++ b/FitnessTracker.V1/wwwroot/index.html
@@ -19,6 +19,7 @@
     <link href="css/layout-core.css" rel="stylesheet" />
     <link href="css/components.css" rel="stylesheet" />
     <link href="css/statsPageStyle.css" rel="stylesheet" />
+    <link href="css/monprofil.css" rel="stylesheet" />
     <link href="css/duo-theme.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
