--- a/FitnessTracker.V1/wwwroot/index.html
+++ b/FitnessTracker.V1/wwwroot/index.html
@@ -21,6 +21,9 @@
     <link href="css/statsPageStyle.css" rel="stylesheet" />
     <link href="css/monprofil.css" rel="stylesheet" />
     <link href="css/duo-theme.css" rel="stylesheet" />
+    <link href="css/choix-programme.css" rel="stylesheet" />
+    <link href="css/choixprog.css" rel="stylesheet" />
+
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
